--- a/index.css
+++ b/index.css
@@ -1,42 +1,37 @@
-.main-container {
-  display: flex;
-  flex-direction: column;
-}
-.title {
-  width: 100%;
-  font-size: 2.5em;
-  background-color: rgb(204, 27, 27);
-  text-align: center;
-  padding: 0.5em 0;
+*{
+    margin: 0;
+    padding: 0;
+    flex-direction: column;
+    justify-content: space-between
 }
 
-.explain {
-  font-size: 1.5em;
-  text-align: left;
-  padding: 0.2em;
-  margin: 0.5em 0.2em;
+header{
+    background-color: rgb(204, 27, 27);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 8vh;
 }
 
-.navigation {
-  font-size: 1.5em;
-  display: flex;
-  justify-content: space-around;
-  padding: 0.2em;
-  margin: 0.2em;
+img{
+    display: block;
+    margin: auto;
 }
 
-.group {
-  font-size: 1em;
-  text-align: center;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 0.5em;
-  margin: 0.5em;
+p{
+    text-align: center;
 }
 
-.group > li {
-  padding: 0.2em;
-  margin: 0.2em;
-  width: 25%;
+button{
+    background-color: rgb(204, 27, 27);
+    color: white;
+    display: flex;
+    justify-content: center;
+    border-radius: 16px;
+    width: 200px;
+    display: inline-block;
+    text-align: center;
+    display: inline-block;
+    margin-right: 10px;
 }
